# FilePilot

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  config.json  package-lock.json  repro_conflict.py  requirements.txt
.github/workflows/: windows-desktop-bundle.yml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend.rs  bg_removal.rs  desktop_ini.rs  icon_apply.rs  lib.rs  main.rs  runtime.rs
docs/: 2026-03-23-security-fixes-summary.md  copywriting-guidelines.md
file_organizer/analysis/: file_reader.py  image_describer.py  models.py  prompts.py  service.py
file_organizer/api/: __main__.py  main.py
file_organizer/app/: models.py  session_service.py  session_store.py
file_organizer/cli/: console.py  event_printer.py  session_cli.py
file_organizer/execution/: service.py
file_organizer/icon_workbench/: __init__.py  chat_agent.py  (+7 more)
frontend/: README.md  package-lock.json  package.json
tests/: test_analysis_path_boundaries.py  test_analysis_structured_service.py  test_api_auth.py  test_api_config.py  test_api_icon_workbench.py  test_api_sessions.py  test_config_manager.py  test_console_ui.py  test_event_printer.py  test_icon_workbench_client.py  test_icon_workbench_service.py  test_image_describer.py  test_local_file_analysis_chat.py  test_logging_utils.py  test_organize_workflow_structured.py  test_organizer_service.py  test_parallel_analysis.py  test_runtime_paths.py  test_session_service.py  test_settings_service.py  test_structured_organizer_service.py
(+70 files in other folders)
