[package]
name = "file-organizer-desktop"
version = "0.1.0"
edition = "2021"
description = "Tauri desktop host for the File Organizer workbench"
authors = ["OpenAI Codex"]
license = "MIT"

[lib]
name = "file_organizer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.file-organizer]
host = "tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = "0.25"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
rand = "0.8"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3"
